ipc/ipdl/test/ipdl/error/oldIncludeSyntax.ipdl
include protocol "Foo.ipdl";

protocol oldIncludeSyntax {
child: async __delete__(X x);
};
